--- a/.github/workflows/azure-webapps-node.yml
+++ b/.github/workflows/azure-webapps-node.yml
@@ -23,7 +23,7 @@ on:
   workflow_dispatch:
 
 env:
-  AZURE_WEBAPP_NAME: your-app-name                    # set this to your application's name
+  AZURE_WEBAPP_NAME: 'oci1201-2024hackathon1-webapp' # set this to your application's name
   AZURE_WEBAPP_PACKAGE_PATH: 'packages/react-frontend'  # path to your web app project
   NODE_VERSION: '20.x'                                # set this to the node version to use
 
