--- a/.github/workflows/azure-webapps-node.yml
+++ b/.github/workflows/azure-webapps-node.yml
@@ -46,7 +46,7 @@ jobs:
     - name: npm install, build, and test
       run: |
         cd ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
-        npm install
+        npm install --production
         npm run build --if-present
 
     - name: Upload artifact for deployment job
